# software_design

./: README.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: tests.yml
src/core/: models.py  serializer.py  validator.py
src/core/engine/: generator.py
src/gui/: execution_window.py  main_window.py  properties.py
src/gui/canvas/: items.py  scene.py  view.py
src/gui/widgets/: interpreter.py  terminal.py  thread_tab.py
src/parallel_emulator/: __main__.py
src/parallel_emulator/application/services/: project_service.py
src/parallel_emulator/core/: code_generator.py  emulator.py  interleaving_search.py  state.py
src/parallel_emulator/domain/: exceptions.py
src/parallel_emulator/domain/entities/: block.py  project.py  shared_state.py  thread.py
src/parallel_emulator/domain/enums/: block_type.py
src/parallel_emulator/domain/value_objects/: condition.py  source.py
src/parallel_emulator/infrastructure/gui/: main_window.py  simulation_thread.py
src/parallel_emulator/infrastructure/gui/dialogs/: block_dialog.py  test_dialog.py
src/parallel_emulator/infrastructure/gui/editor/: block_item.py  connection_item.py  flowchart_scene.py  flowchart_view.py
src/parallel_emulator/infrastructure/persistence/: file_storage.py  project_repository.py
src/parallel_emulator/infrastructure/serialization/: json_serializer.py
tests/: conftest.py  test_gui.py  test_interpreter.py  test_logic.py  test_models.py  test_validator.py
