[tool.poetry]
name = "parallel-flowchart-emulator"
version = "0.1.0"
description = "Багатопотоковий емулятор та верифікатор блок-схем"
authors = ["Дмитро <your@email.com>"]
license = "MIT"
python = "^3.11"

[tool.poetry.dependencies]
python = "^3.11"
pyqt6 = "^6.7.0"
pydantic = "^2.9.0"
pydantic-settings = "^2.5.0"
structlog = "^24.4.0"
orjson = "^3.10.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.0"
ruff = "^0.6.0"
mypy = "^1.11.0"
pytest-qt = "^4.4.0"
pytest-cov = "^5.0.0"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
strict = true